--- a/servicos.html
+++ b/servicos.html
@@ -6,10 +6,9 @@
     <title>navegacao vertical</title>
     <link rel="stylesheet" href="css/estilo.css">
 </head>
-<body id="home">
-    <a href="navegacao-horizontal.html">Proxima aula</a>
-
-    <h2>Home</h2>
+<body id="servicos">
+        <a href="navegacao-horizontal.html">Proxima aula</a>
+    <h2>Serviços</h2>
     <ul id="navegacao">
         <li class="home"> <a href="navegacao-vertical.html">Home</a></li>
         <li class="sobre"> <a href="sobre.html">Sobre</a></li>
