--- a/barra-navegacao-abas.html
+++ b/barra-navegacao-abas.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>navegacao horizontal</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>navegacao com abas</title>
+    <link rel="stylesheet" href="css/estilo-2.css">
 </head>
 <body id="home">
-    <a href="barra-navegacao-abas.html">Proxima aula</a>
     <h2>Home</h2>
     <ul id="navegacao">
-        <li class="home primeiro"> <a href="navegacao-horizontal.html">Home</a></li>
+        <li class="home"> <a href="navegacao-horizontal.html">Home</a></li>
         <li class="sobre"> <a href="sobre2.html">Sobre</a></li>
         <li class="servicos"> <a href="servicos2.html">Serviços</a></li>
         <li class="noticias"> <a href="noticias2.html">Notícias</a></li>
         <li class="contato"> <a href="contato2.html">Contato</a></li>
     </ul>
-
+    <p>Home... ipsum dolor, sit amet consectetur adipisicing elit. Doloremque ipsum accusamus tempore culpa illum, hic quia id sunt dolore, molestias minima illo blanditiis. At numquam consequuntur sapiente sequi, facere adipisci!</p>
     <!--
     <h2>Lista de atividades</h2>
     <ul>
