barra navegação com abas

--- a/sobre2.html
+++ b/sobre2.html
@@ -6,8 +6,8 @@
     <title>navegacao com abas</title>
     <link rel="stylesheet" href="css/estilo-2.css">
 </head>
-<body id="home">
-    <h2>Home</h2>
+<body id="sobre">
+    <h2>Sobre</h2>
     <ul id="navegacao">
         <li class="home"> <a href="barra-navegacao-abas.html">Home</a></li>
         <li class="sobre"> <a href="sobre2.html">Sobre</a></li>
