--- a/heranca.html
+++ b/heranca.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Herança e especificidade</title>
-    <link rel="stylesheet" href="css/estilo.css">
+    <style>
+        /* Aula de herança */
+* {
+    color: red;
+}
+
+h2 {
+    color: blue;
+}
+h2#amarelo {
+    color: yellow;
+}
+h2.verde {
+    color: green;
+}
+    </style>
 </head>
 <body>
     <a href="navegacao-vertical.html">Proxima aula</a>
