--- a/noticias2.html
+++ b/noticias2.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="css/estilo-2.css">
 </head>
 <body id="noticias">
+    <a href="layout.html">Proxima aula</a>
     <h2>Notícias</h2>
     <ul id="navegacao">
+
         <li class="home"> <a href="barra-navegacao-abas.html">Home</a></li>
         <li class="sobre"> <a href="sobre2.html">Sobre</a></li>
         <li class="servicos"> <a href="servicos2.html">Serviços</a></li>
