--- a/contato2.html
+++ b/contato2.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/estilo-2.css">
 </head>
 <body id="contato">
+    <a href="layout.html">Proxima aula</a>
     <h2>Contato</h2>
     <ul id="navegacao">
         <li class="home"> <a href="barra-navegacao-abas.html">Home</a></li>
