--- a/seletores.html
+++ b/seletores.html
@@ -5,11 +5,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seletores</title>
-    <link rel="stylesheet" href="css/estilo.css">
+    <style>
+        /*Seletor Universal*/
+
+        * {
+            border: 1px solid red;
+        }
+
+        h1 {
+            color: green;
+        }
+
+        .verde {
+            color: green;
+        }
+
+        p.verde {
+            color: green
+        }
+
+        */
+        /*Seletor de ID*/
+
+        #cabecalho {
+            border: 1px solid blue;
+        }
+
+        div a {
+            color: green;
+        }
+
+        h1+p {
+            color: red;
+        }
+
+        h1~p {
+            color: pink;
+        }
+    </style>
 </head>
 
 <body>
-        <a href="heranca.html">Proxima aula</a>
+    <a href="heranca.html">Proxima aula</a>
     <ul>
         <li>
             <a href="">Home</a>
@@ -22,10 +59,10 @@
     <a href="">Link teste</a>
 
     <div>
-        
+
         <H2>Título</H2>
         <p>Esse é um parágrafo Parágrafo <a href="">Clique aqui</a></p>
-        
+
     </div>
 
     <div id="cabecalho">
