--- a/servicos3.html
+++ b/servicos3.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navegação Horizontal</title>
+    <title>Serviços</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body id="home">
+<body id="servicos">
     <a href="barra-navegacao-abas.html">Proxima aula</a>
-    <h2>Home</h2>
+    <h2>Serviços</h2>
     <ul id="navegacao">
-        <li class="home-primeiro"> <a href="navegacao-horizontal.html">Home</a></li>
+        <li class="home primeiro"> <a href="navegacao-horizontal.html">Home</a></li>
         <li class="sobre"> <a href="sobre3.html">Sobre</a></li>
         <li class="servicos"> <a href="servicos3.html">Serviços</a></li>
         <li class="noticias"> <a href="noticias3.html">Notícias</a></li>
