--- a/sobre2.html
+++ b/sobre2.html
@@ -6,7 +6,8 @@
     <title>navegacao com abas</title>
     <link rel="stylesheet" href="css/estilo-2.css">
 </head>
-<body id="sobre">
+<body id="sobre">.
+    <a href="layout.html">Proxima aula</a>
     <h2>Sobre</h2>
     <ul id="navegacao">
         <li class="home"> <a href="barra-navegacao-abas.html">Home</a></li>
