imagem fluida, layout fluido e coluna falsa

--- a/layout.html
+++ b/layout.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilo-3.css">
 </head>
 <body>
-    
+    <a href="layout-fluido.html">Proxima aula</a>
     <div id="container">
         <div id="marca">Marca</div>
         <div id="navegacao">
