--- a/formularios2.html
+++ b/formularios2.html
@@ -63,10 +63,10 @@
 </head>
 
 <body>
-
+<a href="arredondamento.html">Proxima aula</a>
     <div id="container">
 
-        <img src="imagens/perfil.png" alt="">
+       
 
         <form action="">
             <div>
