tentando fazer o projeto sozinho e falhando miseravelmente

--- a/arredondamento.html
+++ b/arredondamento.html
@@ -46,7 +46,7 @@
 </head>
 
 <body>
-
+    <a href="noticias-cidade-home.html">Projeto Notícias Cidade</a>
     <div class="caixa">
         <h2>Cabecalho</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum, at numquam nostrum tempora.</p>
