--- a/noticias-cidade-home.html
+++ b/noticias-cidade-home.html
@@ -8,10 +8,36 @@
     <link rel="stylesheet" href="css/projeto.css">
 </head>
 
-<body>
+<body class="home">
+    <!-- Início container-->
+    <div id="container">
+        <!-- Início topo-->
+        <div id="topo">
+            <h1 class="logo">Notícias cidade</h1>
+            <ul id="navegacao">
+                <li class="primeiro"><a id="home" href="noticias-cidade-home.html">Home</a></li>
+                <li><a id="brasil" href="brasil.html">Brasil</a></li>
+                <li><a id="internacional" href="internacional.html">Internacional</a></li>
+                <li><a id="economia" href="economia.html">Econômia</a></li>
+                <li><a id="saude" href="saude.html">Saúde</a></li>
+                <li><a id="ciencia" href="ciencia.html">Ciência</a></li>
+                <li><a id="fotos" href="fotos.html">Fotos</a></li>
+            </ul>
+        </div> <!-- Fim topo-->
+        <!-- Início Conteudo -->
+        <div id="conteudo">
 
+            <div id="primario">Primário</div>
+            <div id="secundario">Secundário</div>
+            <div id="lateral">Lateral</div>
 
-
+        </div> <!-- Fim Conteudo -->
+    </div> <!-- Fim container-->
+    <div id="container-rodape" style="clear: both;">
+        <div id="rodape">
+            &copy; Copyright 2000-2018 Notícias cidade
+        </div>
+    </div>
 </body>
 
 </html>
