--- a/formularios2.html
+++ b/formularios2.html
@@ -63,7 +63,7 @@
 </head>
 
 <body>
-<a href="arredondamento.html">Proxima aula</a>
+<a style="color: white;" href="arredondamento.html">Proxima aula</a>
     <div id="container">
 
        
