--- a/layout-liquido.html
+++ b/layout-liquido.html
@@ -85,7 +85,7 @@
 </head>
 
 <body>
-    <a href="layout-liquido.html">Proxima aula</a>
+    <a href="layout-fluido.html">Proxima aula</a>
     <div id="container">
         <div id="marca">Marca</div>
         <div id="conteudo">
