--- a/noticias-cidade-home.html
+++ b/noticias-cidade-home.html
@@ -39,6 +39,44 @@
                     </div>
                 </div>
 
+                <div class="caixa">
+                    <h2>Mundo</h2>
+                    <div class="caixa-conteudo">
+                        
+                        <ul id="lista-noticias">
+                            <li>
+                                <a href="">
+                                    <img src="imagens/projeto/tecnologia.jpg" alt="" width="80">
+                                    <h3>Novas tecnologias!</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur...p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="imagens/projeto/tecnologia.jpg" alt="" width="80">
+                                    <h3>Novas tecnologias!</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur...p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="imagens/projeto/tecnologia.jpg" alt="" width="80">
+                                    <h3>Novas tecnologias!</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur...p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="imagens/projeto/tecnologia.jpg" alt="" width="80">
+                                    <h3>Novas tecnologias!</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur...p>
+                                </a>
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
+
             </div>
             <div id="secundario">
                 <div class="caixa entrevista">
