--- a/chale-home.html
+++ b/chale-home.html
@@ -15,12 +15,29 @@
 
             <div id="area-logo">
                 <h1 class="logo">
-                    <a href="">Chalé Hotel</a>
+                    <a href="chale-home.html">Chalé Hotel</a>
                 </h1>
             </div>
             <div id="area-menu">
                 <div id="conteudo-menu">
-                    conteudo
+                    <div id="menu-locais">
+                        <span class="locais">
+                            Rio de Janeiro - São Paulo - Belho Horizonte
+                        </span>
+                        <a class="reserva" href="">Reservar</a>
+                        <div style="clear: both;"></div>
+                    </div>
+
+                    <div id="menu">
+                        <ul id="navegacao">
+                            <li><a href="">Home</a></li>
+                            <li><a href="">História</a></li>
+                            <li><a href="">Imprensa</a></li>
+                            <li><a href="">Gastronomia</a></li>
+                            <li><a href="">Contato</a></li>
+                        </ul>
+                    </div>
+
                 </div>
             </div>
 
