--- a/brasil.html
+++ b/brasil.html
@@ -9,6 +9,7 @@
 </head>
 
 <body id="duas-colunas" class="brasil">
+        <a href="chale-home.html">Proxima aula</a>
     <!-- Início container-->
     <div id="container">
         <!-- Início topo-->
