--- a/fotos.html
+++ b/fotos.html
@@ -9,6 +9,7 @@
 </head>
 
 <body id="uma-coluna" class="fotos">
+        <a href="chale-home.html">Proxima aula</a>
     <!-- Início container-->
     <div id="container">
         <!-- Início topo-->
