--- a/noticias-cidade-home.html
+++ b/noticias-cidade-home.html
@@ -9,6 +9,8 @@
 </head>
 
 <body class="home">
+    <a href="chale-home.html">Proxima aula</a>
+
     <!-- Início container-->
     <div id="container">
         <!-- Início topo-->
