--- a/degrades.html
+++ b/degrades.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Degrades</title>
     <link rel="stylesheet" href="normalize.css">
     <style>
         #caixa {
@@ -21,6 +21,8 @@
 </head>
 <body>
     
+    <a href="sombra.html">Proxima aula</a>
+
     <div id="caixa">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi impedit at ut voluptatem! Maxime, ad eveniet laboriosam omnis dicta corrupti explicabo possimus officia? Fugit ipsum veniam accusamus assumenda error neque?</p>
