novas tags input e novas tags

--- a/novas-tags.html
+++ b/novas-tags.html
@@ -39,6 +39,7 @@
 
 <body>
 
+    <a href="novas-tags-input.html">Proxima aula</a>
     <header>
         <h1>Logo</h1>
         <span>Meu site</span>
